Handling missing images

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -53,7 +53,7 @@
  */
 //@import "_partials/overrides";
 @import "_partials/trans";
-//@import "_partials/base";
+@import "_partials/base";
 @import "_partials/typography";
 //@import "_partials/layout";
 
