--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -51,7 +51,7 @@
 /*!
  * And now our local stuff:
  */
-//@import "_partials/overrides";
+@import "_partials/overrides";
 @import "_partials/trans";
 @import "_partials/base";
 @import "_partials/typography";
