--- a/src/styles/_partials/_base.scss
+++ b/src/styles/_partials/_base.scss
@@ -1,3 +1,7 @@
+.list-wrapper {
+	max-width: 540px
+}
+
 .member-photo-wrapper {
 	max-width: 30%;
 	.missing-photo {
@@ -31,5 +35,16 @@
 @include media-breakpoint-up(md) {
 	.missing-photo .fa-user {
 		font-size:6rem;
+	}
+}
+@include media-breakpoint-up(lg) {
+	.member-photo-wrapper {
+		max-width: 40%;
+	}
+	.member-info-wrapper {
+		max-width: 60%;
+	}
+	.list-wrapper {
+		max-width: 720px
 	}
 }
