--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,34 +16,34 @@
 @import "../../../../_vendor/bootstrap-4.4.1/scss/reboot";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/type";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/images";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/code";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/code";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/grid";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/tables";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/tables";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/forms";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/buttons";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/transitions";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/dropdown";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/dropdown";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/button-group";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/input-group";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/custom-forms";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/nav";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/navbar";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/card";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/breadcrumb";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/pagination";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/breadcrumb";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/pagination";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/badge";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/jumbotron";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/alert";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/progress";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/media";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/progress";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/media";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/list-group";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/close";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/toasts";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/close";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/toasts";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/modal";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/tooltip";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/popover";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/carousel";
-@import "../../../../_vendor/bootstrap-4.4.1/scss/spinners";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/tooltip";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/popover";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/carousel";
+//@import "../../../../_vendor/bootstrap-4.4.1/scss/spinners";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/utilities";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/print";
 
