Cachebuster and CSS close restored

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,7 +37,7 @@
 //@import "../../../../_vendor/bootstrap-4.4.1/scss/progress";
 //@import "../../../../_vendor/bootstrap-4.4.1/scss/media";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/list-group";
-//@import "../../../../_vendor/bootstrap-4.4.1/scss/close";
+@import "../../../../_vendor/bootstrap-4.4.1/scss/close";
 //@import "../../../../_vendor/bootstrap-4.4.1/scss/toasts";
 @import "../../../../_vendor/bootstrap-4.4.1/scss/modal";
 //@import "../../../../_vendor/bootstrap-4.4.1/scss/tooltip";
