--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,7 +24,7 @@
 @import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/buttons";
 //@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/transitions";
 //@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/dropdown";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/button-group";
+@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/button-group";
 //@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/nav";
 //@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/navbar";
 @import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/card";
