--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,62 +1,61 @@
-/*!
- * Bootstrap v5.0.0-beta1 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
+@import "../../../../_vendor/bootstrap-5.2.3/scss/mixins/banner";
+@include bsBanner("");
+
 
 // scss-docs-start import-stack
 // Configuration
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/functions";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/variables";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/mixins";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/utilities";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/functions";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/variables";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/maps";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/mixins";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/utilities";
 
 // Layout & components
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/root";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/reboot";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/type";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/images";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/containers";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/grid";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/tables";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/forms";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/buttons";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/transitions";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/dropdown";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/button-group";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/nav";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/navbar";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/card";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/accordion";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/breadcrumb";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/pagination";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/badge";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/alert";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/progress";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/list-group";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/close";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/toasts";
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/modal";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/tooltip";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/popover";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/carousel";
-//@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/spinners";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/root";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/reboot";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/type";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/images";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/containers";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/grid";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/tables";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/forms";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/buttons";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/transitions";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/dropdown";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/button-group";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/nav";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/navbar";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/card";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/accordion";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/breadcrumb";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/pagination";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/badge";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/alert";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/progress";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/list-group";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/close";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/toasts";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/modal";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/tooltip";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/popover";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/carousel";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/spinners";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/offcanvas";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/placeholders";
 
 // Helpers
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/helpers";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/helpers";
 
 // Utilities
-@import "../../../../_vendor/bootstrap-5.0.0-beta1/scss/utilities/api";
+@import "../../../../_vendor/bootstrap-5.2.3/scss/utilities/api";
 // scss-docs-end import-stack
 
 
 /*!
  * And now our local stuff:
- */
+*/
 @import "_partials/overrides";
 @import "_partials/trans";
 @import "_partials/base";
 @import "_partials/typography";
 //@import "_partials/layout";
-
